--- a/app/src/main/res/layout/activity_shared.xml
+++ b/app/src/main/res/layout/activity_shared.xml
@@ -1,94 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:background="#FFFFFF">
 
-        <RadioGroup
-            android:id="@+id/ll_tab"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="13dp"
+            android:src="@mipmap/back" />
 
-            <com.example.com.careasysell.view.DrawableCenterRadioButton
-                android:id="@+id/rb_car_state"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="103"
-                android:button="@null"
-                android:drawableRight="@drawable/drawable_left_radio_selector"
-                android:gravity="center"
-                android:text="车辆状态"
-                android:textColor="#333333" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="百车型汽车"
+            android:textColor="#333333"
+            android:textSize="14sp" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#E6E6E6" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="13dp"
+            android:src="@mipmap/top_more" />
 
-            <com.example.com.careasysell.view.DrawableCenterRadioButton
-                android:id="@+id/rb_car_brand"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="103"
-                android:button="@null"
-                android:drawableRight="@drawable/drawable_left_radio_selector"
-                android:gravity="center"
-                android:text="品牌"
-                android:textColor="#333333" />
+    </RelativeLayout>
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#E6E6E6" />
-
-            <com.example.com.careasysell.view.DrawableCenterRadioButton
-                android:id="@+id/rb_car_order"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="103"
-                android:button="@null"
-                android:drawableRight="@drawable/drawable_left_radio_selector"
-                android:gravity="center"
-                android:text="默认排序"
-                android:textColor="#333333" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#E6E6E6" />
-
-            <com.example.com.careasysell.view.DrawableCenterRadioButton
-                android:id="@+id/rb_car_filter"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="103"
-                android:button="@null"
-                android:drawableRight="@drawable/drawable_left_radio_selector"
-                android:gravity="center"
-                android:text="筛选"
-                android:textColor="#333333" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_shared_car"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@mipmap/shared_bg"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"/>
 
 
-        </RadioGroup>
+    <LinearLayout
+        android:id="@+id/ll_call"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@mipmap/btn_bg"
+        android:gravity="center">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rl_search_result"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#F5F5F5" />
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@mipmap/phone" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="电话咨询"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
 
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
