--- a/app/src/main/res/layout/activity_store_search.xml
+++ b/app/src/main/res/layout/activity_store_search.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_drawer"
@@ -25,7 +24,7 @@
             android:background="#F2F2F2"
             android:drawableLeft="@mipmap/search"
             android:paddingLeft="20dp"
-            android:text="车牌型号/VIN号/车辆编号"
+            android:hint="车牌型号/VIN号/车辆编号"
             android:textColor="#999999"
             android:textSize="14dp"
             app:layout_constraintTop_toTopOf="parent" />
@@ -140,7 +139,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="14dp"
                         android:layout_toLeftOf="@+id/iv_sales_area"
-                        android:textColor="@color/color_333333"
+                        android:textColor="#FF5755"
                         android:textSize="14sp" />
 
                 </RelativeLayout>
@@ -179,7 +178,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="14dp"
                         android:layout_toLeftOf="@+id/iv_car_brand"
-                        android:textColor="@color/color_333333"
+                        android:textColor="#FF5755"
                         android:textSize="14sp" />
 
                 </RelativeLayout>
@@ -218,7 +217,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="14dp"
                         android:layout_toLeftOf="@+id/iv_car_model"
-                        android:textColor="@color/color_333333"
+                        android:textColor="#FF5755"
                         android:textSize="14sp" />
 
                 </RelativeLayout>
@@ -235,13 +234,60 @@
                     android:layout_marginRight="14dp">
 
                     <TextView
-
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:text="年份"
                         android:textColor="@color/color_333333"
                         android:textSize="14sp" />
+
+
+                    <TextView
+                        android:id="@+id/tv_year_all"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                        android:layout_toLeftOf="@+id/ll_choose_year"
+                        android:background="@drawable/bg_edittext"
+                        android:gravity="center"
+                        android:text="不限" />
+
+
+                    <LinearLayout
+                        android:id="@+id/ll_choose_year"
+                        android:layout_width="114dp"
+                        android:layout_height="32dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/bg_edittext"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/img_last"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:padding="6dp"
+                            android:src="@mipmap/last" />
+
+                        <TextView
+                            android:id="@+id/tv_year"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="2018"
+                            android:textColor="#333333"
+                            android:textSize="13sp" />
+
+                        <ImageView
+                            android:id="@+id/img_next"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:padding="6dp"
+                            android:src="@mipmap/next" />
+
+                    </LinearLayout>
 
                 </RelativeLayout>
 
@@ -372,27 +418,27 @@
                     android:layout_marginTop="14dp"
                     android:background="#F5F5F5" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginRight="14dp"
-                    android:gravity="center"
-                    android:text="车型"
-                    android:textColor="@color/color_333333"
-                    android:textSize="14sp" />
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_marginRight="14dp"-->
+                <!--android:gravity="center"-->
+                <!--android:text="车型"-->
+                <!--android:textColor="@color/color_333333"-->
+                <!--android:textSize="14sp" />-->
 
-                <com.zhy.view.flowlayout.TagFlowLayout
-                    android:id="@+id/tag_flow_car_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    app:max_select="1" />
+                <!--<com.zhy.view.flowlayout.TagFlowLayout-->
+                <!--android:id="@+id/tag_flow_car_type"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="160dp"-->
+                <!--app:max_select="1" />-->
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginRight="14dp"
-                    android:layout_marginTop="14dp"
-                    android:background="#F5F5F5" />
+                <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="1dp"-->
+                <!--android:layout_marginRight="14dp"-->
+                <!--android:layout_marginTop="14dp"-->
+                <!--android:background="#F5F5F5" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -420,14 +466,18 @@
             android:paddingTop="10dp">
 
             <Button
+                android:id="@+id/bt_search_reset"
                 android:layout_width="131dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
+                android:background="@drawable/bg_edittext"
                 android:text="重置" />
 
             <Button
+                android:id="@+id/bt_search_sure"
                 android:layout_width="131dp"
                 android:layout_height="40dp"
+                android:background="@mipmap/home_bg"
                 android:text="确定" />
         </LinearLayout>
     </LinearLayout>
