--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -48,12 +48,63 @@
                 android:paddingTop="10dp">
 
                 <View
+                    android:id="@+id/view_line_1"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="#BBBBBB"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintRight_toLeftOf="@+id/view_line_2"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
+                <View
+                    android:id="@+id/view_line_2"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toRightOf="@+id/view_line_1"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_arrive_shop"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
+                <View
+                    android:id="@+id/view_line_3"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_arrive_shop"
+                    app:layout_constraintRight_toLeftOf="@+id/view_line_4"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
+                <View
+                    android:id="@+id/view_line_4"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toRightOf="@+id/view_line_3"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_reserve"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
+                <View
+                    android:id="@+id/view_line_5"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_reserve"
+                    app:layout_constraintRight_toLeftOf="@+id/view_line_6"
+                    app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
+
+                <View
+                    android:id="@+id/view_line_6"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_not_arrive_shop"
+                    app:layout_constraintLeft_toRightOf="@+id/view_line_5"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_deal"
                     app:layout_constraintTop_toTopOf="@+id/tv_not_arrive_shop" />
 
                 <TextView
@@ -172,7 +223,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="电话"
+                    android:text="微信"
                     android:textColor="#999999"
                     android:textSize="12sp"
                     app:layout_constraintTop_toBottomOf="@+id/tv_telephone" />
@@ -258,7 +309,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="23dp"
-                    android:text="客户需求"
+                    android:text="预算区间"
                     android:textColor="#999999"
                     android:textSize="13sp" />
 
