--- a/app/src/main/res/layout/layout_popup_article.xml
+++ b/app/src/main/res/layout/layout_popup_article.xml
@@ -70,6 +70,11 @@
             android:layout_height="0dp"
             android:background="@drawable/drawable_empty"
             android:enabled="true"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:padding="2dp"
+            android:textColor="#333333"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/fm_article_root"
             app:layout_constraintLeft_toLeftOf="@+id/mainTabBar"
             app:layout_constraintRight_toRightOf="@+id/mainTabBar"
@@ -111,7 +116,8 @@
                 android:gravity="center"
                 android:text="复制"
                 android:textColor="#FFFFFF"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone" />
         </LinearLayout>
 
 
