--- a/app/src/main/res/layout/layout_popup_article.xml
+++ b/app/src/main/res/layout/layout_popup_article.xml
@@ -72,7 +72,7 @@
             android:enabled="true"
             android:gravity="top"
             android:inputType="textMultiLine"
-            android:padding="2dp"
+            android:paddingTop="5dp"
             android:textColor="#333333"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/fm_article_root"
@@ -116,8 +116,7 @@
                 android:gravity="center"
                 android:text="复制"
                 android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:visibility="gone" />
+                android:textSize="14sp" />
         </LinearLayout>
 
 
